<!--
  ~ /**
  ~  * Created by Eduard Fomin on 05.02.19 9:42
  ~  * Copyright (c) 2019 . All rights reserved.
  ~  * Last modified 31.01.19 16:38
  ~  */
  -->

<resources>
    <string name="app_name">Audit</string>
    <string name="title_activity_task_list">Задания</string>
    <string name="title_activity_audit_task">Задание</string>

    <string name="EMPTY_KEY">00000000-0000-0000-0000-000000000000</string>

    <string name="action_settings">Настройки</string>
    <string name="msg_password">Неверный пароль!</string>

    <string name="tab_left">Утвержден</string>
    <string name="tab_center">В работе</string>
    <string name="tab_right">Проведен</string>

    <string name="progress_msq">Идет загрузка…</string>
    <string name="empty_list_msg">Список пуст…</string>

    <string name="tab_com">Общее</string>
    <string name="tab_obj">Объекты</string>
    <string name="tab_anl">Аналитика</string>
    <string name="tab_sbj">Предметы</string>
    <string name="tab_ind">Показатели</string>

    <string name="hint_name">Наименование*</string>
    <string name="txt_crit">Критерий*</string>
    <string name="txt_val">Значение*</string>
    <string name="txt_val_float">Процент(ов)*</string>
    <string name="txt_val_int">Предмет(ов)*</string>
    <string name="txt_slct">Отбор</string>
    <string name="txt_dt">Дата</string>
    <string name="txt_sts">Статус</string>
    <string name="txt_tp">Вид аудита</string>
    <string name="txt_org">Организация</string>
    <string name="txt_obj">Объект</string>
    <string name="txt_sbj">Предмет</string>
    <string name="txt_rsp">Ответственный</string>
    <string name="txt_cmt">Комментарий</string>
    <string name="txt_autofill">Автозаполнение показателей</string>
    <string name="txt_openInds">Открывать с показателей</string>
    <string name="txt_clearCopy">Очищать при копировании</string>
    <string name="txt_showSubj">Показывать предметы</string>
    <string name="txt_by_subject">По предметам</string>
    <string name="txt_clear">Очистить значение поля</string>


    <string name="msg_enter_name">Наименование</string>
    <string name="msg_not_find_id">Не могу найти id!</string>
    <string name="msg_delete">Удалить текущую строку?</string>
    <string name="msg_delete_n">Снять или поставить отметку на удаление у … позиции(ий)?</string>
    <string name="msg_not_selected">Нет выбраных позиций!</string>
    <string name="msg_not_fill">Не все обязательные поля заполнены!</string>
    <string name="msg_not_editable">Редактирование невозможно, только выбор!</string>
    <string name="msg_place_copy">Выберите папку для копирования отмеченных позиций</string>
    <string name="msg_place_move">Выберите папку для перемещения отмеченных позиций</string>
    <string name="msg_select">Выберите значение</string>
    <string name="msg_move_error">Некоторые папки не были перемещены, чтобы не нарушать целостность!</string>
    <string name="msg_is_empty">НЕТ ЭЛЕМЕНТОВ ДЛЯ ОТОБРАЖЕНИЯ</string>
    <string name="msg_input_number">Введите число!</string>
    <string name="msg_no_input">Не введено</string>
    <string name="msg_connection_error">Ошибка доступа к 1С! Устраните причину и сделайте новую попытку.</string>


    <string name="ttl_indicator">Показатель</string>
    <string name="ttl_odata_error">Ошибка доступа к 1С</string>
    <string name="ttl_delete">Отметка на удаление</string>
    <string name="ttl_create">Новый элемент</string>
    <string name="ttl_create_group">Новая папка</string>
    <string name="ttl_edit">Изменить элемент</string>
    <string name="ttl_edit_group">Изменить папку</string>
    <string name="ttl_status">Изменение статуса задания</string>
    <string name="ttl_status_n">Изменение статуса заданий</string>

    <string-array name="status_list">
        <item>Утвержден</item>
        <item>В работе</item>
        <item>Проведен</item>
    </string-array>

    <string name="btn_save">Сохранить</string>
    <string name="btn_addition">Добавить</string>
    <string name="btn_change">Изменить</string>
    <string name="btn_unmark_delete">Снять</string>
    <string name="btn_mark_delete">Поставить</string>
    <string name="btn_delete">Удалить</string>
    <string name="btn_cancel">Отмена</string>
    <string name="btn_finish">Завершить</string>
    <string name="btn_ok">OK</string>
    <string name="btn_fill">Заполнить</string>
    <string name="btn_top">Начало</string>

    <string name="search_hint_name">по наименованию&#8230;</string>
    <string name="search_hint_object">по объекту&#8230;</string>

    <string name="item_open">Открыть</string>
    <string name="item_search">Поиск</string>
    <string name="item_choose">Выбрать</string>
    <string name="item_save">Сохранить</string>
    <string name="item_edit">Изменить</string>
    <string name="item_copy">Копировать</string>
    <string name="item_move">Переместить</string>
    <string name="item_create">Добавить</string>
    <string name="item_create_group">Нов. папка</string>
    <string name="item_all_mark">Отметить</string>
    <string name="item_un_mark">Снять</string>
    <string name="item_delete">Удалить</string>

    <string name="item_task_create">Создать задание…</string>
    <string name="item_task_allmark">Отметить все</string>
    <string name="item_task_unmark">Снять отметки</string>
    <string name="item_task_status">Изменить статус…</string>
    <string name="item_task_del">Удалить задания…</string>
    <string name="cnt_item_task_open">Открыть</string>
    <string name="cnt_item_task_copy">Копировать</string>
    <string name="cnt_item_task_status">Статус…</string>
    <string name="cnt_item_task_delete">Удалить…</string>

    <string name="item_today">Сегодня</string>
    <string name="item_tomorrow">Завтра</string>
    <string name="item_nextweek">Через неделю</string>
    <string name="item_nextmonth">Через месяц</string>
    <string name="item_selectday">Выбрать день…</string>

    <string name="item_09">Утро</string>
    <string name="item_13">День</string>
    <string name="item_17">Вечер</string>
    <string name="item_20">Ночь</string>
    <string name="item_selecttime">Выбрать время…</string>

    <string name="title_activity_type">Вид аудита</string>
    <string name="title_activity_reference_maneger">ReferenceManeger</string>
    <string name="title_activity_reference_edit">ReferenceEdit</string>
    <string name="title_activity_object">Объект аудита</string>
    <string name="title_activity_analytic">Аналитика объекта</string>
    <string name="title_date_select">Выберите дату</string>
    <string name="title_activity_settings_audit">Аудит</string>
    <string name="title_activity_settings_task">Значения</string>

    <!-- Strings related to Settings -->

    <string name="pref_header_default">Для нового задания</string>

    <!-- General settings -->
    <string name="pref_header_general">Настройки</string>

    <string name="pref_title_dark_theme">Темная тема</string>
    <string name="pref_description_dark_theme">Рекомендуется для экономии энергии аккумулятора и работы в темное время суток</string>

    <!-- Settings for Tasks -->
    <string name="pref_header_tasks">Задания</string>

    <string name="pref_title_list_settings">Настройки списка</string>

    <string name="pref_title_tasks_tab">Начальная вкладка списка заданий</string>
    <string name="pref_key_tasks_tab">tasks_tab</string>
    <string-array name="pref_tasks_tab_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>

    <string name="pref_key_tasks_group_by_date">tasks_group_by_date</string>
    <string name="pref_title_tasks_group_by_date">Группировать задания по датам</string>
    <string name="pref_description_tasks_group_by_date">Задания с одинаковой датой будут отделены от других разделителем</string>

    <string name="pref_title_task_settings">Настройки документа</string>

    <string name="pref_title_fill_in_fact">Заполнять факт</string>
    <string name="pref_description_fill_in_fact">Устанавливать фактическое значение показателя равным нормативному при заполнении задания</string>
    <string name="pref_key_fill_in_fact">fill_in_fact</string>

    <string name="pref_title_task_tab">Начальная вкладка задания</string>
    <string name="pref_key_task_tab">task_tab</string>
    <string-array name="pref_value_task_tab">
        <item>common</item>
        <item>analytics</item>
        <item>indicators</item>
    </string-array>
    <string-array name="pref_list_task_tab">
        <item>@string/tab_com</item>
        <item>@string/tab_anl</item>
        <item>@string/tab_ind</item>
    </string-array>

    <string name="pref_title_clear_when_copying">Очищать при копировании</string>
    <string name="pref_description_clear_when_copying">Очищать вкладку Аналитика и Показатели при копировании задания</string>
    <string name="pref_key_clear_when_copying">clear_when_copying</string>

    <string name="pref_title_display_subject">Отображать по предметам</string>
    <string name="pref_description_display_subject">Отображать показатели в задании по предметам аудита</string>
    <string name="pref_key_display_subject">display_subject</string>

    <!-- Settings for oData -->
    <string name="pref_header_odata">Доступ к 1С</string>

    <string name="pref_title_odata_path">Путь к стандартному интерфейсу oData</string>
    <string name="pref_default_odata_path">https://storm.bit-it.ru/auditor-demo/odata/standard.odata</string>

    <string name="pref_title_file_path">Путь к медиафайлам</string>
    <string name="pref_default_file_path">https://storm.bit-it.ru/auditor-demo/hs</string>

    <string name="pref_title_odata_user">Имя пользователя для подключения</string>
    <string name="pref_default_odata_user">Администратор</string>

    <string name="pref_title_odata_password">Пароль для подключения</string>
    <string name="pref_default_odata_password">adm@bit</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--
     Copyright 2014 The Android Open Source Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
         http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
    -->
    <string name="picture">Picture</string>
    <string name="description_info">Info</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="intro_message">
        <![CDATA[


            This sample demonstrates the basic use of Camera2 API. Check the source code to see how
            you can display camera preview and take pictures.


        ]]>
    </string>
    <string name="title_activity_gallery">Галлерея</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="btn_continue">Продолжить</string>
    <string name="btn_repeat">Повторить</string>
    <string name="msg_repeat">Повторить попытку доступа к 1С?</string>
</resources>
