<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.eduardf.audit.ReferenceManager"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/item_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always" />
    <group android:id="@+id/groupe_choice">
        <item
            android:id="@+id/allmark"
            android:icon="@drawable/ic_white_check_box_24px"
            android:title="@string/item_all_mark"
            app:showAsAction="always|collapseActionView" />
        <item
            android:id="@+id/unmark"
            android:icon="@drawable/ic_white_check_box_outline_blank_24px"
            android:title="@string/item_un_mark"
            app:showAsAction="always|collapseActionView" />
        <item
            android:id="@+id/choose"
            android:icon="@drawable/ic_white_done_all_24px"
            android:title="@string/item_choose"
            app:showAsAction="always|collapseActionView" />
    </group>

</menu>