<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.eduardf.audit.TaskListActivity"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/item_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always" />
    <item
        android:id="@+id/create"
        android:icon="@drawable/ic_white_add_24px"
        android:title="@string/btn_addition"
        app:showAsAction="always" />
    <item
        android:id="@+id/setting"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>