<!--
  ~ /**
  ~  * Created by Eduard Fomin on 05.02.19 9:42
  ~  * Copyright (c) 2019 . All rights reserved.
  ~  * Last modified 07.12.18 10:25
  ~  */
  -->

<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="com.bit.eduardf.audit.SettingsAudit$GeneralPreferenceFragment"
        android:icon="@drawable/ic_black_phonelink_setup_24px"
        android:title="@string/pref_header_general" />

    <header
        android:fragment="com.bit.eduardf.audit.SettingsAudit$TasksPreferenceFragment"
        android:icon="@drawable/ic_black_table_chart_24px"
        android:title="@string/pref_header_tasks" />

    <header
        android:fragment="com.bit.eduardf.audit.SettingsAudit$oDataPreferenceFragment"
        android:icon="@drawable/ic_black_odata_24px"
        android:title="@string/pref_header_odata" />

</preference-headers>
