<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/field_horizontal_margin"
            android:drawableStart="@drawable/ic_black_edit_24px"
            android:textSize="24sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/field_horizontal_margin"
            android:layout_marginTop="@dimen/field_vertical_margin"
            android:layout_marginEnd="@dimen/field_horizontal_margin"
            android:layout_marginBottom="@dimen/field_vertical_margin"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/layout_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/layout_value"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/txt_val"
                    app:counterEnabled="true">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/text_value"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:drawableEnd="@drawable/ic_black_cancel_24px"
                        android:inputType="numberDecimal"
                        android:maxLines="1" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_cmt"
                app:counterEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/text_comment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_black_cancel_24px"
                    android:inputType="textMultiLine" />
            </android.support.design.widget.TextInputLayout>

            <FrameLayout
                android:id="@+id/datetime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </FrameLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="@dimen/field_horizontal_margin"
            android:paddingTop="@dimen/field_vertical_margin"
            android:paddingEnd="@dimen/field_horizontal_margin"
            android:paddingBottom="@dimen/field_vertical_margin">

            <Button
                android:id="@+id/negative"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/btn_cancel" />

            <Button
                android:id="@+id/positive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_gravity="end"
                android:text="@string/btn_change" />
        </RelativeLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>