<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/field_horizontal_margin"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/ic_black_edit_24px"
                tools:layout_editor_absoluteX="74dp"
                tools:layout_editor_absoluteY="31dp" />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/field_vertical_margin"
                android:layout_weight="1"
                android:text="TextView"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/field_horizontal_margin"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/layout_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/layout_value"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/txt_val"
                    app:counterEnabled="true">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/text_value"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:drawableEnd="@drawable/ic_black_cancel_24px"
                        android:inputType="numberDecimal"
                        android:maxLines="1" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_cmt"
                app:counterEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/text_comment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_black_cancel_24px"
                    android:inputType="textMultiLine" />
            </android.support.design.widget.TextInputLayout>

            <FrameLayout
                android:id="@+id/datetime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </FrameLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/field_horizontal_margin">

            <Button
                android:id="@+id/negative"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/btn_cancel" />

            <Button
                android:id="@+id/positive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_gravity="end"
                android:text="@string/btn_change" />
        </RelativeLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>